Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23448

Android: Parsing of AVD data fails if AVD was renamed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • Qt Creator 4.11.0
    • Android Support
    • None

    Description

      I have for example an AVD by the name Nexus_5X_API_27_x86. If I rename the AVD to foobar, for example using the AVD manager of Android Studio, the AVD info file gets renamed to match the new name, but the image path doesn't get renamed.
      Qt Creator still assumes the file name of the AVD info file resembles the image folder name, and fails to parse:

      qtc.android.avdManager: Avd Parsing: Cannot find sdk API: "C:/Users/aportale/.android/avd/Nexus_5X_API_27_x86.ini"
      

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-23448
        # Subject Branch Project Status CR V

        Activity

          People

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes