Android: Fix AVD info parsing for renamed instances

Android Studio's AVD manager renames the AVD info file to match the
instance ID.

Task-number: QTCREATORBUG-23448
Change-Id: Id8ff0a53ae93b168c55442166072d14c5c84d2e0
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>